--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>CSS font-family</h1>
+<h1>Hello</h1>
 
 <div id="hashbrowns">Look! I'm using a text shadow.</div id="hashbrowns">
 
